# Jeffrey-Burt-Rust-Axum-Fullstack-App

./: Cargo.toml  README.md
backend/: Cargo.toml
backend/src/: api.rs  db_init.rs  main.rs  routes.rs  templates.rs
frontend/: Cargo.toml
frontend/templates/: about.html  hello.html  new_user.html
