[package]
name = "Jeffrey-Burt-Rust-Axum-Fullstack-App"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {version = "0.6.20", features = ["headers"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.7.2", features = ["runtime-tokio", "mysql"] }
chrono = "0.4.35"
askama = "0.12.1"

[[bin]]
name = "backend_main"
path = "backend/src/main.rs"

[workspace]
members = [
    "frontend",
    "backend"
]
